Adição dos forms para digitar Receitas e Ingredientes

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     overflow-x: hidden;
     line-height: 1.5;
     font-family: 'Chau Philomene One', Arial, Helvetica, sans-serif;
-    font-size: var(--p);""
+    font-size: var(--p);
 }
 
 header {
