--- a/style.css
+++ b/style.css
@@ -58,11 +58,9 @@ header p {
 }
 
 #bloco-de-titulo {
-    background-color: rgb(94, 61, 25); 
-    backdrop-filter: blur(10px);               
-    -webkit-backdrop-filter: blur(10px);       
+    background-color: var(--Capuccino);      
     border-radius: var(--RadiusPrincipal);                       
-    border: 1px solid rgb(94, 61, 25);  
+    border: 1px solid var(--Capuccino);  
     padding: var(--PaddingUniversal);
     margin: var(--MarginUniversal) auto;
 }
@@ -84,7 +82,7 @@ section {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    width: 100vw;      
+    width: 100%;      
     height: 100vh; 
     gap: 5%; 
 }
@@ -94,8 +92,11 @@ section {
 }
 
 #bem-vindo img {
-    max-width: 100%;
-    margin: 10px;
+    width: 100%;
+    height: auto;
+    max-height: 400px;       
+    object-fit: contain;  
+    margin: var(--MarginUniversal);
 }
 
 #apresentacao {
@@ -124,8 +125,7 @@ section {
 
 #contato {
     display: flex;
-    flex-wrap: wrap;       
-    align-items: center;  
+    flex-wrap: wrap;
     padding: var(--PaddingUniversal);
     background-color: var(--Capuccino);
 }
@@ -303,6 +303,9 @@ section {
         height: 100vh;
     }
 
+    #bem-vindo img {
+        margin: var(--MarginUniversal) auto;
+    }
     header {
         background-attachment: scroll;
     }
