Adição do id no label de receitas

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ section {
     max-width: 100%
 }
 
-#receita {
+#receitas {
     background-color: var(--Capuccino);
     align-items: center;
     position: relative;
